--- a/templates/share.html
+++ b/templates/share.html
@@ -1,30 +1,12 @@
-{% extends base.html %}
+{% extends front.html %}
 
-{% block head %}
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script> !window.jQuery && document.write('<script src=\"{{static_url("js/jquery-1.4.3.min.js")}}\"><\/script>'); </script>
-<script type="text/javascript" src="{{static_url('js/fancybox/jquery.fancybox-1.3.4.pack.js')}}"></script>
-<link rel="stylesheet" href="{{static_url('js/fancybox/jquery.fancybox-1.3.4.css')}}" type="text/css" media="screen" />
+{% block body-top %}
+  <div class="cross-cookie" data-site="{{ options.cross_cookie_url }}" data-cookie="{{ cookie }}"><a href="{{ options.cross_userscript or static_url(options.cross_userscript) }}" target="_blank">您尚未安装cross-cookie UserScript 点击前往安装</a></div>
 {% end %}
 
-{% block body %}
-  <div class="cross-cookie" data-site="{{ options.cross_cookie_url }}" data-cookie="{{ cookie }}"><a href="{{ options.cross_userscript or static_url(options.cross_userscript) }}" target="_blank">您尚未安装cross-cookie UserScript 点击前往安装</a></div>
-  <div id="layout-background">
-    <div class="logo">
-      <div class="text">
-        <span id="text-loli">LOLI</span><span id="text-dot">・</span>
-      </div>
-      <span id="text-lu">LU</span>
-    </div>
-  </div>
-  <div id="layout-info">
-    <div class="info-box">
-      {% include info.html %}
-      <a class="goback" href="/"><div id="goback-button">&lt;- 回到首页</div></a>
-    </div>
-  </div>
-  <div id="layout-list">{% block list %}{% end %}</div>
-  <div class="clearfix"><div>
+{% block info %}
+  {% include info.html %}
+  <a class="goback" href="/"><div id="goback-button">&lt;- 回到首页</div></a>
 {% end %}
 
 {% block list %}
