disabled implemented function's input box

--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -123,7 +123,7 @@ input, textarea {
 	<div class="addtask_up">
 	<div class="l">标签TAG</div>
 	<div class="r">
-		<input type="text" name="tags" id="task_tags" maxlength="255" value="" style="width:300px;" onkeyup="">
+		<input type="text" name="tags" id="task_tags" maxlength="255" value="" style="width:300px;" onkeyup="" disabled>
 		<span>(必填，多个请用逗号分开)</span>
 	</div>
 	</div>
