--- a/templates/front.html
+++ b/templates/front.html
@@ -16,7 +16,7 @@
     <div id="search">
       <form onsubmit="">
         <div style="width: 276px; height: 28px; background-image: url('{{ static_url('img/qbar.png') }}'); background-repeat: no-repeat; display: inline-block;">
-          <input type="text" maxlength="40" name="q" id="search-q" value="">
+          <input type="text" maxlength="40" name="q" id="search-q" value="" disabled>
         </div>
       </form>
     </div>
