--- a/static/css/base.css
+++ b/static/css/base.css
@@ -102,6 +102,7 @@ body { position: relative; }
  *  
  *  layout-info {{{ */
 
+@media (min-height: 680px) {
   #layout-info .info-box {
     float: left;
     position: absolute;
@@ -115,6 +116,20 @@ body { position: relative; }
     box-shadow: 5px 5px 5px #dedede;
     overflow: hidden;
   }
+}
+@media (max-height: 680px) { 
+  #layout-info .info-box {
+    float: left;
+    position: absolute;
+    top: 35px;
+    width: 200px;
+    height: 600px;
+    border-bottom-right-radius:25px;
+    background-color: rgba(250, 250, 250, 0.9);
+    box-shadow: 5px 5px 5px #dedede;
+    overflow: hidden;
+  }
+}
     #layout-info .info-box .important { font-weight: bold; }
 
     #layout-info .info-box #download-help { margin: 20px 10px; }
