add_task will return the task that added

--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -107,7 +107,7 @@ input, textarea {
 	<div class="addtask_up">
 	<div class="l">任务下载地址</div>
 	<div class="r">
-		<input type="text" name="url" id="task_url" maxlength="255" value="" style="width:300px;" onkeyup="">
+		<input type="text" name="url" id="task_url" maxlength="255" value="" style="width:300px;" onkeyup="" />
 		<span>(必填)</span>
 	</div>
 	</div>
@@ -115,7 +115,7 @@ input, textarea {
 	<div class="addtask_up">
 	<div class="l">任务标题</div>
 	<div class="r">
-		<input type="text" name="title" id="task_title" maxlength="255" value="" style="width:300px;" onkeyup="">
+		<input type="text" name="title" id="task_title" maxlength="255" value="" style="width:300px;" onkeyup="" />
 		<span>(选填，默认任务文件名)</span>
 	</div>
 	</div>
@@ -123,7 +123,7 @@ input, textarea {
 	<div class="addtask_up">
 	<div class="l">标签TAG</div>
 	<div class="r">
-		<input type="text" name="tags" id="task_tags" maxlength="255" value="" style="width:300px;" onkeyup="" disabled>
+		<input type="text" name="tags" id="task_tags" maxlength="255" value="" style="width:300px;" onkeyup="" />
 		<span>(必填，多个请用逗号分开)</span>
 	</div>
 	</div>
