--- a/templates/share.html
+++ b/templates/share.html
@@ -1,5 +1,7 @@
 {% extends front.html %}
 
+{% block title %}{{ task.taskname }} - Loli.lu{% end %}
+
 {% block body-top %}
   <div class="cross-cookie" data-site="{{ options.cross_cookie_url }}" data-cookie="{{ cookie }}"><a href="{{ options.cross_userscript or static_url(options.cross_userscript) }}" target="_blank">您尚未安装cross-cookie UserScript 点击前往安装</a></div>
 {% end %}
