--- a/templates/front.html
+++ b/templates/front.html
@@ -35,9 +35,8 @@
   <div id="layout-background">
     <div class="logo">
       <div class="text">
-        <span id="text-loli">Loli</span><span id="text-dot">・</span>
+        <span id="text-loli">LOLI</span><span id="text-dot">·</span><span id="text-lu">LU</span>
       </div>
-      <span id="text-lu">lu</span>
     </div>
   </div>
   <div id="layout-info">
