--- a/templates/front.html
+++ b/templates/front.html
@@ -14,7 +14,7 @@
       <a href="/" title="Loli.lu">Loli.lu</a>
     </div>
     <div id="search">
-      <form onsubmit="">
+      <form action="/">
         <div style="width: 276px; height: 28px; background-image: url('{{ static_url('img/qbar.png') }}'); background-repeat: no-repeat; display: inline-block;">
           <input type="text" maxlength="40" name="q" id="search-q" value="">
         </div>
