--- a/templates/task_list.html
+++ b/templates/task_list.html
@@ -1,8 +1,20 @@
 {% for task in tasks %}
 <li class="task-item" data-task-id="{{ task.id }}">
   <div class="process-bar {{ task.status }}" style="width: {{ 100-task.process }}%"></div>
-  <a class="get-lixian-url iframe" href="/get_lixian_url?task_id={{ task.id }}" target="_blank" title="{{ task.taskname }}"><div class="tname"><span class="p1">{{ len(task.taskname) > 15 and task.taskname[:-15] or task.taskname }}</span><span class="p2">{{ len(task.taskname) > 15 and task.taskname[-15:] or "" }}</span></div></a>
-  <div class="info"><span class="file-size">{{ format_size(task.size) }}</span><span class="date">{{ task.createtime.strftime("%Y-%m-%d") }}</span></div>
+  <a class="get-lixian-url iframe" href="/get_lixian_url?task_id={{ task.id }}" target="_blank" title="{{ task.taskname }}">
+      <div class="tname"><span class="p1">{{ len(task.taskname) > 15 and task.taskname[:-15] or task.taskname }}</span><span class="p2">{{ len(task.taskname) > 15 and task.taskname[-15:] or "" }}</span></div>
+  </a>
+  <div class="info">
+      <span class="file-size">{{ format_size(task.size) }}</span>
+      <span class="date">{{ task.createtime.strftime("%Y-%m-%d") }}</span>
+  </div>
+  <div class="clearfix"></div>
+  <div class="ext-info hidden">
+      <span class="uploader">UP主: {{ email2name(task.creator) or task.creator or "unknow" }}</span>
+      {% if task.tags %}
+      <span class="tags">TAGS: {% raw modules.TagsModule(task.tags[:8]) %}</span>
+      {% end %}
+  </div>
   <div class="clearfix"></div>
 </li>
 {% end %}
