--- a/static/css/base.css
+++ b/static/css/base.css
@@ -246,13 +246,15 @@ body { position: relative; }
   .lixian-box { width: 100%; }
     .lixian-box .task-info { padding: 5px 10px 5px 10px; background-color: #666; color: #fff; font-weight: bold; }
     .lixian-box .task-info .task-name { float: left; width: 500px; }
-    .lixian-box .task-info .task-botton { float: right; border-radius: 5px; width: 70px; text-align: center; background-color: #fff; color: #666; }
-    .lixian-box .task-info .task-botton a { color: #000; text-decoration: none; }
-    /*
-      .lixian-box .task-info .finished { }
-      .lixian-box .task-info .downloading { }
-      .lixian-box .task-info .waiting { }
-    */
+    .lixian-box .task-info .task-botton { float: right; border-radius: 5px; width: 70px; height: 21px; text-align: center; background-color: #fff; color: #666; position: relative; margin-left: 10px; }
+    .lixian-box .task-info .task-botton:hover { color: #fff; background-color: #888; }
+    .lixian-box .task-info a { color: #666; text-decoration: none; }
+      /*.lixian-box .task-info .finished { }*/
+      /*.lixian-box .task-info .downloading { }*/
+      /*.lixian-box .task-info .waiting { }*/
+    .lixian-box .task-info .batch-links { position: absolute; top: 21px; z-index: 33; }
+    .lixian-box .task-info .batch-links .task-botton { color: #fff; background-color: #999; margin: 0; }
+    .lixian-box .task-info .batch-links .task-botton:hover { color: #fff; background-color: #888; margin: 0; }
 
     .lixian-box .file-list { margin-top: 10px; }
       .lixian-box .file-list .file-item { position: relative; padding: 5px 10px 5px 10px; }
@@ -265,4 +267,6 @@ body { position: relative; }
 
         .lixian-box .file-list .file-item .file-title { float: left; width: 500px; }
         .lixian-box .file-list .file-item .file-size { position: absolute; right: 10px; bottom: 5px; }
+
+    .lixian-box #link-text { width: 100%; border: none; }
 /* }}} lixian_box */
