--- a/templates/task_list.html
+++ b/templates/task_list.html
@@ -19,6 +19,7 @@
 {% end %}
 {% if tasks %}
 <script>
+  $(".get-lixian-url").fancybox({ width: 700 });
   $(".task-item").hover(function() {
     $(this).find(".ext-info").delay(250).show(1);
   }, function() {
